--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -5,9 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cursos - Todo3dRamos</title>
+
+    <!-- BOOTSTRAP -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <!-- Estilos propios -->
+
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,200;0,300;0,400;0,600;1,800&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/cf7102e069.js" crossorigin="anonymous"></script>
 
@@ -60,39 +67,69 @@
             </div>
 
         </div>
-        <section class="contenido--cursos"> <!------ Inicio de cursos disponibles ------>
-            <div class="contenido__boxCursos">
-                <div class=" botton botton--curso botton--cursoD3DI"><a href=""></a></div>
-                <br>                                                                  <!-- BORRAR BR Y HEIGHT-->
-                <b>Diseño 3D Inicial</b>
-            </div>
-            <div class="contenido__boxCursos">
-                <div class=" botton botton--curso botton--cursoD3DA" ><a href=""></a></div>
-                <br>                                                                  <!-- BORRAR BR Y HEIGHT-->
-                <b>Diseño 3D Avanzado</b>
-            </div>
-            <div class="contenido__boxCursos">
-                <div class=" botton botton--curso botton--cursoUI3DI" ><a href=""></a></div>
-                <br>                                                               <!-- BORRAR BR Y HEIGHT-->
-                <b>Uso de impresora 3D Inicial</b>
-            </div>
-            <div class="contenido__boxCursos">
-                <div class=" botton botton--curso botton--cursoUI3DA" ><a href=""></a></div>
-                <br>                                                                  <!-- BORRAR BR Y HEIGHT-->
-                <b>Uso de impresora 3D Avanzado</b>
-            </div>
-            <div class="contenido__boxCursos">
-                <div class=" botton botton--curso botton--cursoUI3DR" ><a href=""></a></div>
-                <br>                                                                  <!-- BORRAR BR Y HEIGHT-->
-                <b>Impresoras 3D de resina</b>
-            </div>
-            <div class="contenido__boxCursos">
-                <div class=" botton botton--curso botton--cursoUI3DE"><a href=""></a>    </div>      
-                <br>                                                                  <!-- BORRAR BR Y HEIGHT-->
-                <b>Ensamblado de Impresoras 3D</b>
-            </div>
-           
-       </section> <!------ Fin de cursos disponibles ------>
+
+        <!-- Inicio de seccion CURSOS DISPONIBLES, grid y cards implementado mediante Bootstrap -->
+              <section class="contenido--cursos"> <!------ Inicio de cursos disponibles ------>
+                  <div class="row row-cols-1 row-cols-md-3 g-4 mt-5 container-fluid">
+                      <div class="col">
+                        <div class="card h-100">
+                          <img src="../images/fusion-360-curso-principiantes.jpg" class="card-img-top " alt="...">
+                          <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col">
+                        <div class="card h-100">
+                          <img src="../images/CursoFUSIONavanzado.jpg" class="card-img-top" alt="...">
+                          <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a short card.</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col">
+                        <div class="card h-100">
+                          <img src="../images/CursoMARLIN.jpg" class="card-img-top" alt="...">
+                          <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col">
+                        <div class="card h-100">
+                          <img src="../images/Curso-de-resina-banner.jpg" class="card-img-top" alt="...">
+                          <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col">
+                          <div class="card h-100">
+                            <img src="../images/impresion-3d-faqs.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col">
+                          <div class="card h-100">
+                            <img src="../images/CursoArmadoImpresora.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Card title</h5>
+                              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+            </section> <!------ Fin de cursos disponibles ------>
+        <!-- FIN de seccion CURSOS DISPONIBLES -->
+
+
    </main> <!------ Fin de main ------>
   
 
