ENTREGA CODER MODIFICADO

--- a/pages/cursos.html
+++ b/pages/cursos.html
@@ -75,8 +75,8 @@
                         <div class="card h-100">
                           <img src="../images/fusion-360-curso-principiantes.jpg" class="card-img-top " alt="...">
                           <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title">Introduccion al diseño 3D</h5>
+                            <p class="card-text">Durante este curso veras las bases del diseño y modelado 3D. Consulta los contenidos de este curso en CONTACTO</p>
                           </div>
                         </div>
                       </div>
@@ -84,8 +84,8 @@
                         <div class="card h-100">
                           <img src="../images/CursoFUSIONavanzado.jpg" class="card-img-top" alt="...">
                           <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a short card.</p>
+                            <h5 class="card-title">Diseño 3D avanzado</h5>
+                            <p class="card-text">Si ya realizaste el curso de Introduccion al Diseño 3D, quiza debas dar el proximo paso hacia el modelado avanzado.</p>
                           </div>
                         </div>
                       </div>
@@ -93,8 +93,8 @@
                         <div class="card h-100">
                           <img src="../images/CursoMARLIN.jpg" class="card-img-top" alt="...">
                           <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                            <h5 class="card-title">Marlin y configuracion de una impresora 3D</h5>
+                            <p class="card-text">Para llevar tus piezas al mejor nivel de resolucion es necesario modificar parametros de nuestrea impresora, ellos se encuenteran en el Marlin.</p>
                           </div>
                         </div>
                       </div>
@@ -102,8 +102,8 @@
                         <div class="card h-100">
                           <img src="../images/Curso-de-resina-banner.jpg" class="card-img-top" alt="...">
                           <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                            <h5 class="card-title">Impresion en Resina</h5>
+                            <p class="card-text">Algunas piezas requieren tamaños y resoluciones que serian imposibles para una impresora FDM, es alli donde las impresoras de resina resaltan.</p>
                           </div>
                         </div>
                       </div>
@@ -111,8 +111,8 @@
                           <div class="card h-100">
                             <img src="../images/impresion-3d-faqs.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                              <h5 class="card-title">Card title</h5>
-                              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                              <h5 class="card-title">Slicers y configuracion de Gcodes</h5>
+                              <p class="card-text">Durante este curso aprenderas como sacar el maximo partido de tu impresora utilizando los parametros de lso Slicers.</p>
                             </div>
                           </div>
                         </div>
@@ -120,8 +120,8 @@
                           <div class="card h-100">
                             <img src="../images/CursoArmadoImpresora.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                              <h5 class="card-title">Card title</h5>
-                              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                              <h5 class="card-title">Mejoras y modificaciones para tu impresora 3D</h5>
+                              <p class="card-text">Todas la impresoras tienen defectos, en este curso te enseñaremos como quitar los mismos, para asi mejorar resolucion, velocidad, entre otros......</p>
                             </div>
                           </div>
                         </div>
