--- a/index.html
+++ b/index.html
@@ -71,22 +71,22 @@
                             <div class="carousel-item active">
                                 <img src="/images/CursoArmadoImpresora.jpg" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
-                                <h5>First slide label</h5>
-                                <p>Some representative placeholder content for the first slide.</p>
+                                <h5>Ensamblado de Impresoras 3D</h5>
+                                <p>Acompañado por tutores y compañeros aprenderas a dar tus primeros pasos en la impresion 3D.</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="/images/fusion-360-curso-principiantes.jpg" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
-                                <h5>Second slide label</h5>
-                                <p>Some representative placeholder content for the second slide.</p>
+                                <h5>Fusion 360</h5>
+                                <p>Es fundamental conocer las bases del diseño 3D para introducirte en este mundo.</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="/images/Curso-de-resina-banner.jpg" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
-                                <h5>Third slide label</h5>
-                                <p>Some representative placeholder content for the third slide.</p>
+                                <h5>Impresion en Resina</h5>
+                                <p>Para llevar tus impresiones a otro nivel puedes probar con la impresion de resina.</p>
                                 </div>
                             </div>
                             </div>
@@ -135,7 +135,7 @@
                     </section> <!-------Noticias ------>
                 <!-- Fin de seccion noticias -->
 
-                
+
     </main> <!------ Cierre del main ------>
 
 
