--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             
                 <div class="head__box__empecemos">
                     <div class="head__box__empecemos__contenido">
-                        <h1>Aprende a diseñar y a imprimir tus ideas</h1>
+                        <h1>Aprende a diseñar diseñar y a imprimir tus ideas</h1>
                         <br>        <!-- BORRAR DESPUES -->
                         <div class="botton--empecemos" ><a   href="/pages/cursos.html">EMPECEMOS</a></div>
                     </div>
