--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -30,10 +30,10 @@
                 <nav>
                     <ul class="head_nav"> <!-- Links a las diferentes paginas -->
                         <li class="botton"> <a href="../index.html">INICIO</a> </li>
-                        <li class="botton"> <a href="/pages/cursos.html">CURSOS</a> </li>
-                        <li class="botton"> <a href="/pages/nosotros.html">NOSOTROS</a> </li>
-                        <li class="botton"> <a href="/pages/contacto.html">CONTACTO</a> </li>
-                        <li class="botton"> <a href="/pages/preguntas.html">PREGUNTAS</a> </li>
+                        <li class="botton"> <a href="../pages/cursos.html">CURSOS</a> </li>
+                        <li class="botton"> <a href="../pages/nosotros.html">NOSOTROS</a> </li>
+                        <li class="botton"> <a href="../pages/contacto.html">CONTACTO</a> </li>
+                        <li class="botton"> <a href="../pages/preguntas.html">PREGUNTAS</a> </li>
                         <li class="botton botton-cruz"><a href="#"><i class="fa-solid fa-xmark"></i></a></li>
                     </ul>
                 </nav>
@@ -61,7 +61,7 @@
                 <div class="head__box__empecemos__contenido">
                     <h1>Aprende a diseñar y a imprimir tus ideas</h1>
                     <br>        <!-- BORRAR DESPUES -->
-                    <div class="botton--empecemos" ><a   href="/pages/cursos.html">EMPECEMOS</a></div>
+                    <div class="botton--empecemos" ><a   href="../pages/cursos.html">EMPECEMOS</a></div>
                 </div>
             </div>
 
@@ -100,7 +100,7 @@
             <h2>Redes Sociales Control3D</h2>
             <p>Puedes encontrarnos en nuestro canal de Youtube y otras redes sociales ¡síguenos para estar al día de novedades y promociones en la academia!</p>
             <div class="pie_redes__links"> <!-- Links externos -->
-                <a class="botton botton--foto  botton--inicio" href="/index.html"></a>   <!-- Logo de Todo3dRamos-->
+                <a class="botton botton--foto  botton--inicio" href="../index.html"></a>   <!-- Logo de Todo3dRamos-->
                 <a class="botton botton--foto  botton--instagram" target="_blank" href="https://www.instagram.com/todo_3d_ramos/"></a> <!-- Logo de Instagram-->
                 <a class="botton botton--foto  botton--facebook" target="_blank" href="https://www.facebook.com/"></a> <!-- Logo de Facebook-->
                 <a class="botton botton--foto  botton--youtube" target="_blank" href="https://web.whatsapp.com/"></a> <!-- Logo de Youtube-->
