--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
                 <div class="head__box__nav">
                     <nav id="BAR">
                         <ul class="head_nav" > <!-- Links a las diferentes paginas -->
-                            <li class="botton botton--INICIO"> <a href="../index.html">INICIO</a> </li>
-                            <li class="botton botton--INICIO"> <a href="/pages/cursos.html">CURSOS</a> </li>
-                            <li class="botton botton--INICIO"> <a href="/pages/nosotros.html">NOSOTROS</a></li>
-                            <li class="botton botton--INICIO"> <a href="/pages/contacto.html">CONTACTO</a></li>
-                            <li class="botton botton--INICIO"> <a href="/pages/preguntas.html">PREGUNTAS</a> </li> 
+                            <li class="botton botton--INICIO"> <a href="./index.html">INICIO</a> </li>
+                            <li class="botton botton--INICIO"> <a href="./pages/cursos.html">CURSOS</a> </li>
+                            <li class="botton botton--INICIO"> <a href="./pages/nosotros.html">NOSOTROS</a></li>
+                            <li class="botton botton--INICIO"> <a href="./pages/contacto.html">CONTACTO</a></li>
+                            <li class="botton botton--INICIO"> <a href="./pages/preguntas.html">PREGUNTAS</a> </li> 
                             <li class="botton botton-cruz"><a href="#"><i class="fa-solid fa-xmark"></i></a></li>
                         </ul>
                     </nav> 
                 </div>
                 <div class="head__box__logo" id="head__box__logo--INDEX">
-                    <img src="../images/LOGO.png" alt=""  class="head_nav__logo" > <!-- Logo a la derecha del Nav -->
+                    <img src="./images/LOGO.png" alt=""  class="head_nav__logo" > <!-- Logo a la derecha del Nav -->
                 </div>
             
                 <div class="head__box__empecemos">
@@ -69,21 +69,21 @@
                             </div>
                             <div class="carousel-inner"style=" position:relative; z-index: -1;">
                             <div class="carousel-item active">
-                                <img src="../images/CursoArmadoImpresora.jpg" class="d-block w-100" alt="...">
+                                <img src="./images/CursoArmadoImpresora.jpg" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
                                 <h5>Ensamblado de Impresoras 3D</h5>
                                 <p>Acompañado por tutores y compañeros aprenderas a dar tus primeros pasos en la impresion 3D.</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="../images/fusion-360-curso-principiantes.jpg" class="d-block w-100" alt="...">
+                                <img src="./images/fusion-360-curso-principiantes.jpg" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
                                 <h5>Fusion 360</h5>
                                 <p>Es fundamental conocer las bases del diseño 3D para introducirte en este mundo.</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="../images/Curso-de-resina-banner.jpg" class="d-block w-100" alt="...">
+                                <img src="./images/Curso-de-resina-banner.jpg" class="d-block w-100" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
                                 <h5>Impresion en Resina</h5>
                                 <p>Para llevar tus impresiones a otro nivel puedes probar con la impresion de resina.</p>
@@ -109,22 +109,22 @@
                         <div class="container-fluid">
                             <div class="row gx-6 gy-5  ">
                                 <div class="col-lg-3 col-md-6  col-xs-12  ">
-                                    <img class="img-fluid" src="../images/Nota1.PNG" alt="" >                        <!-- BORRAR HEIGHT-->
+                                    <img class="img-fluid" src="./images/Nota1.PNG" alt="" >                        <!-- BORRAR HEIGHT-->
                                     <h3>Las impresoras 3D de resina para el sector dental</h3>
                                     <p>La industria dental es uno de los sectores que utiliza la fabricación aditiva para ofrecer dispositivos personalizados, adaptados a cada paciente. A partir de un escaneado 3D o de datos de imágenes médicas, los profesionales dentales pueden obtener modelos 3D….</p>
                                 </div>
                                 <div class="col-lg-3 col-md-6 col-xs-12">
-                                    <img class="img-fluid" src="../images/Nota2.png" alt="" >                        <!-- BORRAR HEIGHT--> 
+                                    <img class="img-fluid" src="./images/Nota2.png" alt="" >                        <!-- BORRAR HEIGHT--> 
                                     <h3>Lab 3Dnatives: Test de la impresora 3D Sigma D25, de BCN3D</h3>
                                     <p>Fundada en 2012 por tres estudiantes de la Universidad Politécnica de Cataluña, la empresa BCN3D se ha convertido con el paso de los años en uno de los actores clave del mercado de la impresión 3D FDM. Históricamente dedicada a…</p>
                                 </div>
                                 <div class="col-lg-3 col-md-6 col-xs-12 ">
-                                    <img class="img-fluid" src="../images/Nota3.jpeg" alt="" >                        <!-- BORRAR HEIGHT-->
+                                    <img class="img-fluid" src="./images/Nota3.jpeg" alt="" >                        <!-- BORRAR HEIGHT-->
                                     <h3>3DGence lanza una serie de impresoras 3D FFF de metal</h3>
                                     <p>A pesar del continuo dominio de los polímeros en la fabricación aditiva, la impresión 3D de metal también ha aumentado significativamente en los últimos años con una tasa de crecimiento más rápida que muchos otros segmentos de productos en la…</p>
                                 </div>
                                 <div class="col-lg-3 col-md-6 col-xs-12">
-                                    <img class="img-fluid" src="../images/Nota4.PNG" alt="">                        <!-- BORRAR HEIGHT-->
+                                    <img class="img-fluid" src="./images/Nota4.PNG" alt="">                        <!-- BORRAR HEIGHT-->
                                     <h3>3DGence y la impresión 3D de alto rendimiento para procesos fiables y repetibles</h3>
                                     <p>El fabricante europeo 3DGence ha anunciado el lanzamiento de una nueva máquina FFF industrial compatible con materiales de alto rendimiento. Llamada INDUSTRY F421, esta impresora 3D se une a la gama de productos de la empresa, que busca satisfacer las…</p>
                                 </div>
