Corregir boton EMPECEMOS

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="head__box__empecemos__contenido">
                         <h1>Aprende a diseñar diseñar y a imprimir tus ideas</h1>
                         <br>        <!-- BORRAR DESPUES -->
-                        <div class="botton--empecemos" ><a   href="/pages/cursos.html">EMPECEMOS</a></div>
+                        <div class="botton--empecemos" ><a   href="./pages/cursos.html">EMPECEMOS</a></div>
                     </div>
                 </div>
                 
