Cambiando margins de PREGUNTAS

--- a/pages/preguntas.html
+++ b/pages/preguntas.html
@@ -74,7 +74,7 @@
            
         </div>
         <section> <!----- Inicio de lista de preguntas ----->
-            <ul class="contenido__preguntas">
+            <ul class="contenido__preguntas mt-4">
                 <li><h3>¿Otorgan certificados?</h3> ¡Sí! Otorgamos un certificado digital. Para conseguirlo tenés que cumplir con algunos requisitos</li>
                 <li><h3>¿Que elementos necesito?</h3> Cada cursos cuenta con requisitos diferentes</li>
                 <li><h3>¿Se dictan clases presenciales?</h3> No, todos los cursos se dictan de manera online. Tanto el profesor como el estudiante deben conectarse ciertos días y horarios de la semana para poder asistir a la clase. Todos los estudiantes tienen un grupo con el que empiezan y terminan el curso.</li>
@@ -84,7 +84,7 @@
                 <li><h3>¿Quienes somos?</h3> Somos un grupo de emprendedores en el mundo de la impresion 3d </li>
                 <li><h3>Contenido Nuevo</h3> Cada semana se carga nuevo contenido y desafios</li>
 
-                <div class="botton botton_contacto"><a href="../pages/contacto.html">Contactanos</a> <!----- Link a contactos -----></div>
+                <div class="botton botton_contacto mt-3"><a href="../pages/contacto.html">Contactanos</a> <!----- Link a contactos -----></div>
             </ul>      
         </section>  <!----- Fin de lista de preguntas ----->
     </main> <!----- Fin main ----->
