Contenido de Nosotros

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -73,15 +73,26 @@
 
 
         <section class="container-fluid"> <!------ Inicio de texto sobre nosotros ------>
-            <div class="row mt-5 ">
-                <div class=" col-md-9  col-xs-12  ">
-                    <p class="" >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque eius rerum amet voluptatem voluptates tempora, sit doloremque eos inventore ratione autem officia assumenda optio velit, quasi delectus vero error laboriosam veritatis perferendis? Cum eligendi facilis necessitatibus neque aliquam id quibusdam at voluptate voluptatibus vero, quae accusantium veniam harum, dignissimos nisi veritatis. Odit harum, ut veritatis fugiat reprehenderit animi molestiae voluptatibus soluta quas blanditiis laudantium repellendus deserunt voluptatem similique minus fugit minima consectetur cumque? Doloremque non laborum eligendi natus ab illum sequi sed atque quia reiciendis. Ex consectetur tenetur mollitia dignissimos expedita odio non et vero! Amet qui eligendi incidunt quia neque, perferendis porro, necessitatibus sapiente alias voluptate reiciendis similique deserunt dolores, corrupti recusandae hic voluptas excepturi! Facere, ullam? Dignissimos culpa praesentium eum, accusantium ab maxime unde error ea illo porro voluptas, repudiandae animi impedit consequatur commodi voluptate tempora nihil, enim dolor suscipit? Enim pariatur molestias quos nesciunt. Unde laudantium reiciendis labore, earum quidem eum doloremque beatae sit commodi ratione corporis voluptatem itaque officia laborum fugit error animi. Minima accusantium corrupti placeat eligendi quae, sapiente perspiciatis repudiandae nostrum nobis doloribus impedit atque, modi vel saepe. Quas porro corporis accusamus quibusdam quos iure a quasi hic veniam minima. Doloremque, neque officia! At, amet. Libero ex soluta labore placeat nemo, dicta doloremque, laboriosam dolor veritatis laudantium sed quibusdam debitis aspernatur consectetur magni fugit unde similique molestiae nobis reprehenderit alias. Dolorum possimus nemo cum dignissimos itaque consequuntur sunt debitis veniam, rem repellendus quod suscipit, accusantium quos! Eum praesentium quam nobis suscipit vero debitis ut eaque sed excepturi architecto, beatae magni repudiandae dicta, fuga neque officiis quisquam odio et optio possimus. Deleniti, ipsum. Rem sunt, ullam aliquid soluta possimus voluptatibus voluptatem ducimus laborum quos, facilis a praesentium incidunt pariatur amet vel! Magnam nihil enim illo cum totam magni eveniet cumque deleniti at voluptas corporis quidem dignissimos eius, quas sequi, explicabo cupiditate. Nostrum recusandae quaerat est. Odit ipsa sunt beatae facere maiores sit. Provident veniam harum aliquid mollitia perferendis laudantium labore earum dicta iure voluptatem unde adipisci dolore illo ratione quos ipsam officiis est assumenda laborum exercitationem eaque voluptatum, ad error. Fugiat neque dolorem doloremque ducimus culpa id suscipit. Dolores voluptatibus a cumque optio saepe dolor sunt quas, nisi nam! Velit minima hic expedita modi quo ea adipisci id repudiandae praesentium assumenda delectus dolorum nisi est laudantium quasi deserunt, saepe quisquam pariatur veritatis facilis suscipit debitis. Repellat iusto aspernatur sint. Repellat dolores sed dolorem consequuntur amet.</p>    
+            <div class="row mt-5 justify-content-around ">
+                <div class=" col-md-5  col-xs-12  ">
+                    <p class="" >La impresión 3D es el presente y el futuro en la creación de modelos a nivel industrial. Todo 3D Ramos tiene como objetivo llevar esta tecnología al alcance de la comunidad.</p>    
+                    <p>Todo 3D Ramos está  construido para emprendedores. Nuestra plataforma va más allá de la creación de contenido. Nos conectamos con nuestros estudiantes mediante clases y proyectos personalizados. Exploramos los gustos de nuestros usuarios para poder desarrollar contenidos adaptativos, y que ellos puedan llevar estos conocimientos a la práctica.</p>
                 </div>
-                <div class="col-md-3  col-xs-12  ">
+                <div class="col-md-4  col-xs-5  ">
                     <img class="img-fluid" src="../assets/images/shutterstock_188419790-e1439475344980.jpg" alt="Imagen sobre nosotros">
                 </div>
-
             </div>
+            <div class="row mt-5 justify-content-around">
+                <div class=" col-md-10  col-xs-12  ">
+                        <p class="row mt-3" >
+                            Nosotros iniciamos en el mundo del diseño con un objetivo completamente diferente, antes de la explosion de las impresoras 3D, el diseño se solía enfocar en los medios audiovisuales. Pero al ver las posibilidades de las impresoras 3d nos introducimos como hobbistas, lo cual se terminó transformando en una pasión y un trabajo. 
+                            Hoy en día seguimos aprendiendo de este mundo en desarrollo e intentamos llevar este aprendizaje a nuestros cursos. 
+                            En la actualidad contamos con cursos de Diseño, Prototipado, Ensamblaje de Impresoras 3D, entre otros. En todos ellos tendrás a profesores que te acompañarán durante el desarrollo del mismo. 
+                        </p>    
+                </div>
+            </div>
+
+
             
             
         </section> <!------ Fin de texto sobre nosotros ------>
